# flaskr

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1c0a47692aad_add_user_displayname_column.py  412f5e85b710_add_user_created_column.py  ff3fc27cd408_add_user_email_column.py
flaskr/: __init__.py  app.py  auth.py  blog.py  db.py  models.py  openapi.yaml  settings.py
flaskr/templates/auth/: login.html.j2  register.html.j2
flaskr/templates/blog/: create.html.j2  index.html.j2  update.html.j2
tests/: conftest.py  test_api_app.py  test_auth.py  test_blog.py
