[project]
name = "flaskr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connexion[flask,swagger-ui,uvicorn]~=3.0",
    "coverage>=7.10.7",
    "flask~=3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
